--- a/house.gov.by/27f645764041e2ea742a0d370054612f1b6469d8.yml
+++ b/house.gov.by/27f645764041e2ea742a0d370054612f1b6469d8.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 28 Oct 2017 15:01:58 GMT
+    - Wed, 01 Nov 2017 11:43:45 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=qeqq8l892h2i1dhsi52cjd28b3; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 28 Oct 2017 15:01:58 GMT
+recorded_at: Wed, 01 Nov 2017 11:43:46 GMT
