--- a/house.gov.by/ee05aa364c6bfd50c59a9f3f647df095bd14d75c.yml
+++ b/house.gov.by/ee05aa364c6bfd50c59a9f3f647df095bd14d75c.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 01 Nov 2017 11:32:54 GMT
+    - Wed, 01 Nov 2017 12:23:03 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=m7cr5kbvnpt12c8eldui6aigt3; path=/
+    - PHPSESSID=8u3jjvklg38l6hphc9c9k1tsu7; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 01 Nov 2017 11:32:55 GMT
+recorded_at: Wed, 01 Nov 2017 12:23:04 GMT
