200 OK http://house.gov.by/ru/deputies-ru/view/tsetsoxo-aleksandr-141/

--- a/house.gov.by/d6c0193ed9febfe1de1dc6d2e0b529dd922b22e1.yml
+++ b/house.gov.by/d6c0193ed9febfe1de1dc6d2e0b529dd922b22e1.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 01 Nov 2017 12:02:04 GMT
+    - Wed, 01 Nov 2017 12:29:52 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=e7hhg0uec5eu8e8hbuc6lhq667; path=/
+    - PHPSESSID=is0tcnqap4ogist905ccsrbdt0; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 01 Nov 2017 12:02:06 GMT
+recorded_at: Wed, 01 Nov 2017 12:29:54 GMT
