--- a/house.gov.by/c29402d0c0c4407341d5ac1cb15df6e786903128.yml
+++ b/house.gov.by/c29402d0c0c4407341d5ac1cb15df6e786903128.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 01 Nov 2017 12:08:18 GMT
+    - Wed, 01 Nov 2017 12:44:10 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=g59rljku79f92ktrcsur8ierc6; path=/
+    - PHPSESSID=4tp4j3se8htd6r1800m6j4ore3; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 01 Nov 2017 12:08:19 GMT
+recorded_at: Wed, 01 Nov 2017 12:44:10 GMT
