--- a/house.gov.by/67efa9cb5fba22cc9416b37d8d064928422ac277.yml
+++ b/house.gov.by/67efa9cb5fba22cc9416b37d8d064928422ac277.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 01 Nov 2017 10:48:18 GMT
+    - Wed, 01 Nov 2017 12:45:22 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=g370hke75otlrmivdol08an1b3; path=/
+    - PHPSESSID=9h2el0si7omkrb2neptm22d731; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 01 Nov 2017 10:48:19 GMT
+recorded_at: Wed, 01 Nov 2017 12:45:22 GMT
