--- a/house.gov.by/d0a884277727eae17a1c4bd400cca7b7c6b0916d.yml
+++ b/house.gov.by/d0a884277727eae17a1c4bd400cca7b7c6b0916d.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 01 Nov 2017 10:57:57 GMT
+    - Wed, 01 Nov 2017 13:02:40 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=nbgd1rb6o4k43ec5a51ll0evb7; path=/
+    - PHPSESSID=llspki9ec0rsiuh4mmikt7ne07; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 01 Nov 2017 10:57:58 GMT
+recorded_at: Wed, 01 Nov 2017 13:02:41 GMT
