--- a/house.gov.by/0db15682979f7aca8a3ef53708295e151e7e663b.yml
+++ b/house.gov.by/0db15682979f7aca8a3ef53708295e151e7e663b.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 01 Nov 2017 10:45:05 GMT
+    - Wed, 01 Nov 2017 13:03:10 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=a8d5mohs4mmj4ge32g7lqlsu37; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 01 Nov 2017 10:45:06 GMT
+recorded_at: Wed, 01 Nov 2017 13:03:11 GMT
