--- a/house.gov.by/88d267ba892b1d706108a63b82d4b21837e04636.yml
+++ b/house.gov.by/88d267ba892b1d706108a63b82d4b21837e04636.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 01 Nov 2017 11:52:43 GMT
+    - Wed, 01 Nov 2017 13:09:01 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=79d1c60q5b7haqkvcq75nh6n60; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 01 Nov 2017 11:52:43 GMT
+recorded_at: Wed, 01 Nov 2017 13:09:02 GMT
