--- a/house.gov.by/21b9e23de458f0cc56f922a22b261011eada96c6.yml
+++ b/house.gov.by/21b9e23de458f0cc56f922a22b261011eada96c6.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 01 Nov 2017 11:52:12 GMT
+    - Wed, 01 Nov 2017 13:39:00 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=el76md3039g7d57l5kqghgp4o5; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 01 Nov 2017 11:52:12 GMT
+recorded_at: Wed, 01 Nov 2017 13:39:02 GMT
