200 OK http://house.gov.by/ru/deputies-ru/view/markevich-ivan-595/

--- a/house.gov.by/42ad481d1268b9df2495229a7103b09352bfa8f1.yml
+++ b/house.gov.by/42ad481d1268b9df2495229a7103b09352bfa8f1.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 01 Nov 2017 13:24:12 GMT
+    - Wed, 01 Nov 2017 14:05:01 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=3tt0k0jnlijcgcglpv3l3fi2f1; path=/
+    - PHPSESSID=udm1mj3hu1sjq5btkcb7lhb5s5; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 01 Nov 2017 13:24:13 GMT
+recorded_at: Wed, 01 Nov 2017 14:05:02 GMT
