--- a/house.gov.by/61d2fb337605ce0e5df6b86e1c8c104dbc74308a.yml
+++ b/house.gov.by/61d2fb337605ce0e5df6b86e1c8c104dbc74308a.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 01 Nov 2017 12:14:55 GMT
+    - Wed, 01 Nov 2017 14:17:47 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=mka0udjohb2u4hdve9gmr7jmv1; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 01 Nov 2017 12:14:55 GMT
+recorded_at: Wed, 01 Nov 2017 14:17:47 GMT
