--- a/house.gov.by/46dfedc0d01f097096bf05cbbb3067cf518ec95c.yml
+++ b/house.gov.by/46dfedc0d01f097096bf05cbbb3067cf518ec95c.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 01 Nov 2017 13:58:43 GMT
+    - Wed, 01 Nov 2017 14:18:19 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=mkb3m0vst2ud84jhhtdg930nd1; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 01 Nov 2017 13:58:44 GMT
+recorded_at: Wed, 01 Nov 2017 14:18:19 GMT
