--- a/house.gov.by/13c3f1d080bb7ffe4718e6690a60210f42f4effb.yml
+++ b/house.gov.by/13c3f1d080bb7ffe4718e6690a60210f42f4effb.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 01 Nov 2017 13:12:45 GMT
+    - Wed, 01 Nov 2017 14:20:13 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=2l0hc3itooj76vidrnqfc7a0f0; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 01 Nov 2017 13:12:46 GMT
+recorded_at: Wed, 01 Nov 2017 14:20:13 GMT
