--- a/house.gov.by/7f75d2d1e80e6aa5f8fe0e4e78721b8f4b7d2d4e.yml
+++ b/house.gov.by/7f75d2d1e80e6aa5f8fe0e4e78721b8f4b7d2d4e.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 01 Nov 2017 13:41:57 GMT
+    - Wed, 01 Nov 2017 14:21:37 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=odeaidtl7a1qfdarm49qku0jj2; path=/
+    - PHPSESSID=4q3cvpuge8st14jjnfaln681d0; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 01 Nov 2017 13:41:58 GMT
+recorded_at: Wed, 01 Nov 2017 14:21:37 GMT
