200 OK http://house.gov.by/ru/deputies-ru/view/chekan-vasilij-628/

--- a/house.gov.by/35350fb47d5a65216e747050ae245f4df20ac274.yml
+++ b/house.gov.by/35350fb47d5a65216e747050ae245f4df20ac274.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 01 Nov 2017 12:29:01 GMT
+    - Wed, 01 Nov 2017 14:22:38 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=gc6aof58cthbg7hr8dsojl6rf7; path=/
+    - PHPSESSID=i2fj1of6qudioh48te7n8hpr26; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 01 Nov 2017 12:29:03 GMT
+recorded_at: Wed, 01 Nov 2017 14:22:39 GMT
