--- a/house.gov.by/1fb00ecebacfe149b89cb2bcda4bc3b123d0d075.yml
+++ b/house.gov.by/1fb00ecebacfe149b89cb2bcda4bc3b123d0d075.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 01 Nov 2017 13:47:39 GMT
+    - Wed, 01 Nov 2017 14:57:22 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=4n0skh046c28ucu989dc71hva6; path=/
+    - PHPSESSID=konvufn7604dbea9t6rkiijjg1; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 01 Nov 2017 13:47:39 GMT
+recorded_at: Wed, 01 Nov 2017 14:57:23 GMT
