--- a/house.gov.by/18a60a83bb284d557c25ff9dd36fa7f15d3da0fd.yml
+++ b/house.gov.by/18a60a83bb284d557c25ff9dd36fa7f15d3da0fd.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 01 Nov 2017 12:54:00 GMT
+    - Wed, 01 Nov 2017 14:59:59 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=jnvc4gpi0hu0ous2c2m5blqo33; path=/
+    - PHPSESSID=e7inf4r6alfp4dphr81os2tol3; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 01 Nov 2017 12:54:01 GMT
+recorded_at: Wed, 01 Nov 2017 15:00:00 GMT
