--- a/house.gov.by/6c00ea3b441533a219abd352fa8bcd894e43d78d.yml
+++ b/house.gov.by/6c00ea3b441533a219abd352fa8bcd894e43d78d.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 01 Nov 2017 12:44:42 GMT
+    - Wed, 01 Nov 2017 15:18:48 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=7hcguog2iacev55diarokq20c6; path=/
+    - PHPSESSID=mq2086a8kmkt5492hica70nd30; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 01 Nov 2017 12:44:43 GMT
+recorded_at: Wed, 01 Nov 2017 15:18:50 GMT
