--- a/house.gov.by/d75a0ec939d96097bb357b02dd11935e38450948.yml
+++ b/house.gov.by/d75a0ec939d96097bb357b02dd11935e38450948.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 01 Nov 2017 12:47:19 GMT
+    - Wed, 01 Nov 2017 15:31:13 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=4q4o1sm5mk9bk8ehlpdqp25ds2; path=/
+    - PHPSESSID=ei5c9gm3b03caep1heaj8r2qj1; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 01 Nov 2017 12:47:19 GMT
+recorded_at: Wed, 01 Nov 2017 15:31:14 GMT
