--- a/house.gov.by/bba2b399edfbdd7001d27d69129864633c2b0114.yml
+++ b/house.gov.by/bba2b399edfbdd7001d27d69129864633c2b0114.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 01 Nov 2017 13:36:20 GMT
+    - Wed, 01 Nov 2017 15:32:05 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=k2gtaugdl460hfgfbcmja6ba63; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 01 Nov 2017 13:36:21 GMT
+recorded_at: Wed, 01 Nov 2017 15:32:05 GMT
