200 OK http://house.gov.by/ru/deputies-ru/view/zablotskij-dmitrij-587/

--- a/house.gov.by/375b520b3b22a4b7509bba10a782956fa4af5c86.yml
+++ b/house.gov.by/375b520b3b22a4b7509bba10a782956fa4af5c86.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 01 Nov 2017 13:15:47 GMT
+    - Wed, 01 Nov 2017 15:33:59 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=nr19egtv3qmer3kchubkh3nt84; path=/
+    - PHPSESSID=ku6khtkoschmiiunri1gbmucf3; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 01 Nov 2017 13:15:49 GMT
+recorded_at: Wed, 01 Nov 2017 15:34:01 GMT
