200 OK http://house.gov.by/ru/deputies-ru/view/andreychenko-vladimir-ru-1/

--- a/house.gov.by/203355d99f99eb9d37f57fbe5701c4a546004852.yml
+++ b/house.gov.by/203355d99f99eb9d37f57fbe5701c4a546004852.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 01 Nov 2017 14:00:25 GMT
+    - Wed, 01 Nov 2017 22:29:06 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=amtj919qiap4c8ff1dhs17fal3; path=/
+    - PHPSESSID=db23ah3p1im2l2lkatntqho5r3; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 01 Nov 2017 14:00:26 GMT
+recorded_at: Wed, 01 Nov 2017 22:29:08 GMT
