200 OK http://house.gov.by/ru/deputies-ru/view/misevets-vitalij-621/

--- a/house.gov.by/29d706cd0fcf9ac1ab414c688071538d3289280b.yml
+++ b/house.gov.by/29d706cd0fcf9ac1ab414c688071538d3289280b.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 01 Nov 2017 14:36:17 GMT
+    - Wed, 01 Nov 2017 23:38:56 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=k000j856c5jahjdnvdp99t9df3; path=/
+    - PHPSESSID=bns4m62uft2br4slnqohv86vq2; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 01 Nov 2017 14:36:19 GMT
+recorded_at: Wed, 01 Nov 2017 23:38:58 GMT
