200 OK http://house.gov.by/ru/deputies-ru/view/starovojtov-aleksandr-606/

--- a/house.gov.by/bba2b399edfbdd7001d27d69129864633c2b0114.yml
+++ b/house.gov.by/bba2b399edfbdd7001d27d69129864633c2b0114.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 01 Nov 2017 15:32:05 GMT
+    - Thu, 02 Nov 2017 00:07:28 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=rj9b65re32dmehdfs12v51bvb5; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 01 Nov 2017 15:32:05 GMT
+recorded_at: Thu, 02 Nov 2017 00:07:29 GMT
