200 OK http://house.gov.by/ru/deputies-ru/view/tsuprik-leonid-544/

--- a/house.gov.by/87f447c456f26f395fa11ed8a0d87ee14576be22.yml
+++ b/house.gov.by/87f447c456f26f395fa11ed8a0d87ee14576be22.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 02 Nov 2017 00:15:25 GMT
+    - Thu, 02 Nov 2017 00:30:24 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=impr51iolu17ej1maol4iq8to5; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - UPDATING
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 02 Nov 2017 00:15:25 GMT
+recorded_at: Thu, 02 Nov 2017 00:30:24 GMT
