200 OK http://house.gov.by/ru/deputies-ru/view/zanko-sergej-554/

--- a/house.gov.by/fd869c3f613d876a0d82c8c94d3eb1366e20902f.yml
+++ b/house.gov.by/fd869c3f613d876a0d82c8c94d3eb1366e20902f.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Wed, 01 Nov 2017 23:02:14 GMT
+    - Sat, 04 Nov 2017 16:23:15 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=ujeu80re4qvtj8j0q53d3u5id5; path=/
+    - PHPSESSID=csinl4vbcmf4o346tg90erj771; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 01 Nov 2017 23:02:15 GMT
+recorded_at: Sat, 04 Nov 2017 16:23:17 GMT
