200 OK http://house.gov.by/ru/deputies-ru/view/rybak-andrej-590/

--- a/house.gov.by/175b8d419fa1bd9e9fad0a4be41ca720a1ad7a4c.yml
+++ b/house.gov.by/175b8d419fa1bd9e9fad0a4be41ca720a1ad7a4c.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 02 Nov 2017 00:00:19 GMT
+    - Sat, 04 Nov 2017 17:16:19 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=f1t60oasgq1n4r9o7r3in2fjh3; path=/
+    - PHPSESSID=rl67oir0qttdm9i7b2vp0pfrm2; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 02 Nov 2017 00:00:21 GMT
+recorded_at: Sat, 04 Nov 2017 17:16:21 GMT
