200 OK http://house.gov.by/ru/deputies-ru/view/gajdukevich-valerij-133/

--- a/house.gov.by/926c98f652fe842fdc133d493ebc3221651e44da.yml
+++ b/house.gov.by/926c98f652fe842fdc133d493ebc3221651e44da.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 04 Nov 2017 16:06:26 GMT
+    - Sat, 04 Nov 2017 18:42:10 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=d35a3htp7t6gjahmue4ghkrre6; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 04 Nov 2017 16:06:26 GMT
+recorded_at: Sat, 04 Nov 2017 18:42:11 GMT
