200 OK http://house.gov.by/ru/deputies-ru/view/misevets-vitalij-621/

--- a/house.gov.by/29d706cd0fcf9ac1ab414c688071538d3289280b.yml
+++ b/house.gov.by/29d706cd0fcf9ac1ab414c688071538d3289280b.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 04 Nov 2017 16:57:50 GMT
+    - Sat, 04 Nov 2017 19:23:15 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=jfav22luau43f7sl96phme21l4; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 04 Nov 2017 16:57:50 GMT
+recorded_at: Sat, 04 Nov 2017 19:23:17 GMT
