200 OK http://house.gov.by/ru/deputies-ru/view/naumovich-andrej-138/

--- a/house.gov.by/a9add64c7e632d6060a43fd791affef82f62ae6b.yml
+++ b/house.gov.by/a9add64c7e632d6060a43fd791affef82f62ae6b.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 04 Nov 2017 18:32:33 GMT
+    - Sat, 04 Nov 2017 20:30:51 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=1msescco7jl9n0p1k6smn8h0b2; path=/
+    - PHPSESSID=vbnmmnm6pj1o1lqamgo7uoa164; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 04 Nov 2017 18:32:35 GMT
+recorded_at: Sat, 04 Nov 2017 20:30:52 GMT
