200 OK http://house.gov.by/ru/deputies-ru/view/kachina-leonid-546/

--- a/house.gov.by/3e8a0bc757ed9f6cd82435b8a06b033244a79ee4.yml
+++ b/house.gov.by/3e8a0bc757ed9f6cd82435b8a06b033244a79ee4.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 04 Nov 2017 19:56:22 GMT
+    - Sun, 05 Nov 2017 13:14:42 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=2ubuvpp3tl83vtlksd4f4la0j2; path=/
+    - PHPSESSID=i4l1r0mednaobc58e49g7hece5; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 04 Nov 2017 19:56:23 GMT
+recorded_at: Sun, 05 Nov 2017 13:14:43 GMT
