200 OK http://house.gov.by/ru/deputies-ru/view/segodnik-aleksandr-139/

--- a/house.gov.by/dc1c147be8c59110ac14e73189251cdb61ecb95c.yml
+++ b/house.gov.by/dc1c147be8c59110ac14e73189251cdb61ecb95c.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 05 Nov 2017 14:16:43 GMT
+    - Sun, 05 Nov 2017 15:24:21 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=ehulrpame9mslnr0851okli4c5; path=/
+    - PHPSESSID=u8jd9lgvbe8ns8kj9nil13v8c6; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 05 Nov 2017 14:16:43 GMT
+recorded_at: Sun, 05 Nov 2017 15:24:22 GMT
