200 OK http://house.gov.by/ru/deputies-ru/view/rybak-andrej-590/

--- a/house.gov.by/175b8d419fa1bd9e9fad0a4be41ca720a1ad7a4c.yml
+++ b/house.gov.by/175b8d419fa1bd9e9fad0a4be41ca720a1ad7a4c.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 05 Nov 2017 14:10:57 GMT
+    - Sun, 05 Nov 2017 15:41:46 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=fi0kp149n16kc3tqbd8ljcpkv7; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - UPDATING
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 05 Nov 2017 14:10:58 GMT
+recorded_at: Sun, 05 Nov 2017 15:41:46 GMT
