200 OK http://house.gov.by/ru/deputies-ru/view/anisim-elena-592/

--- a/house.gov.by/ad5699a85dda4bc170ae62bd42a4a439ac006a13.yml
+++ b/house.gov.by/ad5699a85dda4bc170ae62bd42a4a439ac006a13.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 05 Nov 2017 12:41:32 GMT
+    - Sun, 05 Nov 2017 15:43:57 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=js5opqlacmn5h4p930ui0bitu6; path=/
+    - PHPSESSID=0t9rbpvftg4guufrgkjth8ks20; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 05 Nov 2017 12:41:32 GMT
+recorded_at: Sun, 05 Nov 2017 15:43:57 GMT
