200 OK http://house.gov.by/ru/deputies-ru/view/gajduk-oksana-619/

--- a/house.gov.by/f401899002fa995b931687935221e487c5c1b8fa.yml
+++ b/house.gov.by/f401899002fa995b931687935221e487c5c1b8fa.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 05 Nov 2017 12:55:19 GMT
+    - Sun, 05 Nov 2017 16:13:09 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=is9bphabru04kvd3rns8pr5km6; path=/
+    - PHPSESSID=9pk1er47m57p5rm5lrmgkt0s95; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 05 Nov 2017 12:55:20 GMT
+recorded_at: Sun, 05 Nov 2017 16:13:10 GMT
