200 OK http://house.gov.by/ru/deputies-ru/view/voronetskij-valerij-613/

--- a/house.gov.by/3d07e35244747efde8f8b9a3aa7e65d29bf715ed.yml
+++ b/house.gov.by/3d07e35244747efde8f8b9a3aa7e65d29bf715ed.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Mon, 06 Nov 2017 20:21:45 GMT
+    - Tue, 07 Nov 2017 21:03:28 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=l3889ojlejr0k5he50ki10j5l5; path=/
+    - PHPSESSID=b5nm6p574fd626bdjo31tn4uh6; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 06 Nov 2017 20:21:46 GMT
+recorded_at: Tue, 07 Nov 2017 21:03:29 GMT
