200 OK http://house.gov.by/ru/deputies-ru/view/dorogokupets-jurij-165/

--- a/house.gov.by/f858a9aae2501fc55b9f062aceead02c97dfa301.yml
+++ b/house.gov.by/f858a9aae2501fc55b9f062aceead02c97dfa301.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Mon, 06 Nov 2017 21:56:08 GMT
+    - Tue, 07 Nov 2017 21:14:42 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -40,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - UPDATING
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 06 Nov 2017 21:56:08 GMT
+recorded_at: Tue, 07 Nov 2017 21:14:42 GMT
