200 OK http://house.gov.by/ru/deputies-ru/view/kachina-leonid-546/

--- a/house.gov.by/3e8a0bc757ed9f6cd82435b8a06b033244a79ee4.yml
+++ b/house.gov.by/3e8a0bc757ed9f6cd82435b8a06b033244a79ee4.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Mon, 06 Nov 2017 21:55:39 GMT
+    - Tue, 07 Nov 2017 21:23:55 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=jv56v6vkm9ll81jd3bhotvv4q6; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - UPDATING
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 06 Nov 2017 21:55:40 GMT
+recorded_at: Tue, 07 Nov 2017 21:23:55 GMT
