200 OK http://house.gov.by/ru/deputies-ru/view/gujvik-nataljja-160/

--- a/house.gov.by/cfd30729c5aa2b5af72e0e2251bb4620a2d190bb.yml
+++ b/house.gov.by/cfd30729c5aa2b5af72e0e2251bb4620a2d190bb.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Thu, 09 Nov 2017 05:10:46 GMT
+    - Mon, 13 Nov 2017 09:26:08 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=njevjvsrpne46e5gg4o03rh1u2; path=/
+    - PHPSESSID=usgn35qrv4lh49d40llndeg5k0; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Thu, 09 Nov 2017 05:10:47 GMT
+recorded_at: Mon, 13 Nov 2017 09:26:08 GMT
